src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_split_with_sizes_copy(value self, value split_sizes, int64_t dim);
void atg_split_with_sizes_copy_out(value out, value self, value split_sizes, int64_t dim);
value atg_sqrt(value self);
value atg_sqrt_(value self);
value atg_sqrt_out(value out, value self);
value atg_square(value self);
value atg_square_(value self);
value atg_square_out(value out, value self);
value atg_squeeze(value self);
value atg_squeeze_(value self);
value atg_squeeze_copy(value self);
value atg_squeeze_copy_dim(value self, int64_t dim);
value atg_squeeze_copy_dim_out(value out, value self, int64_t dim);
value atg_squeeze_copy_dims(value self, value dim);
value atg_squeeze_copy_dims_out(value out, value self, value dim);
value atg_squeeze_copy_out(value out, value self);
value atg_squeeze_dim(value self, int64_t dim);
value atg_squeeze_dim_(value self, int64_t dim);
value atg_squeeze_dims(value self, value dim);
value atg_squeeze_dims_(value self, value dim);
value atg_sspaddmm(value self, value mat1, value mat2, value beta, value alpha);
value atg_sspaddmm_out(value out, value self, value mat1, value mat2, value beta, value alpha);
value atg_stack(value tensors, int64_t dim);
value atg_stack_out(value out, value tensors, int64_t dim);
value atg_std(value self, int unbiased);
value atg_std_correction(value self, value dim, value correction, int keepdim);
value atg_std_correction_out(value out, value self, value dim, value correction, int keepdim);
value atg_std_dim(value self, value dim, int unbiased, int keepdim);
value atg_std_mean(value self, int unbiased);
value atg_std_mean_correction(value self, value dim, value correction, int keepdim);
value atg_std_mean_correction_out(value out0, value out1, value self, value dim, value correction, int keepdim);
value atg_std_mean_dim(value self, value dim, int unbiased, int keepdim);
value atg_std_out(value out, value self, value dim, int unbiased, int keepdim);
value atg_stft(value self, int64_t n_fft, value hop_length, value win_length, value window, int normalized, int onesided, int return_complex, int align_to_window);
value atg_stft_center(value self, int64_t n_fft, value hop_length, value win_length, value window, int center, const char * pad_mode, int normalized, int onesided, int return_complex, int align_to_window);
value atg_stride(value self, int64_t dim);
value atg_sub(value self, value other, value alpha);
value atg_sub_(value self, value other, value alpha);
value atg_sub_out(value out, value self, value other, value alpha);
value atg_sub_scalar(value self, value other, value alpha);
value atg_sub_scalar_(value self, value other, value alpha);
value atg_sub_scalar_out(value out, value self, value other, value alpha);
value atg_subtract(value self, value other, value alpha);
value atg_subtract_(value self, value other, value alpha);
value atg_subtract_out(value out, value self, value other, value alpha);
value atg_subtract_scalar(value self, value other, value alpha);
value atg_subtract_scalar_(value self, value other, value alpha);
value atg_sum(value self, int dtype);
value atg_sum_dim_intlist(value self, value dim, int keepdim, int dtype);
value atg_sum_intlist_out(value out, value self, value dim, int keepdim, int dtype);
value atg_sum_out(value out, value self, int dtype);
value atg_sum_to_size(value self, value size);
value atg_svd(value self, int some, int compute_uv);
value atg_svd_u(value U, value S, value V, value self, int some, int compute_uv);
value atg_swapaxes(value self, int64_t axis0, int64_t axis1);
value atg_swapaxes_(value self, int64_t axis0, int64_t axis1);
value atg_swapdims(value self, int64_t dim0, int64_t dim1);
value atg_swapdims_(value self, int64_t dim0, int64_t dim1);
value atg_t(value self);
value atg_t_(value self);
value atg_t_copy(value self);
value atg_t_copy_out(value out, value self);
value atg_take(value self, value index);
value atg_take_along_dim(value self, value indices, value dim);
value atg_take_along_dim_out(value out, value self, value indices, value dim);
value atg_take_out(value out, value self, value index);
value atg_tan(value self);
value atg_tan_(value self);
value atg_tan_out(value out, value self);
value atg_tanh(value self);
value atg_tanh_(value self);
value atg_tanh_backward(value grad_output, value output);
value atg_tanh_backward_grad_input(value grad_input, value grad_output, value output);
value atg_tanh_out(value out, value self);
value atg_tensor_split(value self, int64_t sections, int64_t dim);
value atg_tensor_split_indices(value self, value indices, int64_t dim);
value atg_tensor_split_tensor_indices_or_sections(value self, value tensor_indices_or_sections, int64_t dim);
value atg_tensordot(value self, value other, value dims_self, value dims_other);
value atg_tensordot_out(value out, value self, value other, value dims_self, value dims_other);
value atg_threshold(value self, value threshold, value value_);
value atg_threshold_(value self, value threshold, value value_);
value atg_threshold_backward(value grad_output, value self, value threshold);
value atg_threshold_backward_grad_input(value grad_input, value grad_output, value self, value threshold);
value atg_threshold_out(value out, value self, value threshold, value value_);
value atg_tile(value self, value dims);
value atg_to(value self, int device);