src/bindings/torch_bindings_generated7.ml


  let stubs_split_with_sizes_copy =
    foreign
      "atg_split_with_sizes_copy"
      (gc_tensor @-> ptr int64_t @-> int @-> int64_t @-> returning (ptr raw_tensor))
  ;;

  let stubs_split_with_sizes_copy_out =
    foreign
      "atg_split_with_sizes_copy_out"
      (ptr gc_tensor
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning void)
  ;;

  let stubs_sqrt = foreign "atg_sqrt" (gc_tensor @-> returning raw_tensor)
  let stubs_sqrt_ = foreign "atg_sqrt_" (gc_tensor @-> returning raw_tensor)

  let stubs_sqrt_out =
    foreign "atg_sqrt_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_square = foreign "atg_square" (gc_tensor @-> returning raw_tensor)
  let stubs_square_ = foreign "atg_square_" (gc_tensor @-> returning raw_tensor)

  let stubs_square_out =
    foreign "atg_square_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_squeeze = foreign "atg_squeeze" (gc_tensor @-> returning raw_tensor)
  let stubs_squeeze_ = foreign "atg_squeeze_" (gc_tensor @-> returning raw_tensor)
  let stubs_squeeze_copy = foreign "atg_squeeze_copy" (gc_tensor @-> returning raw_tensor)

  let stubs_squeeze_copy_dim =
    foreign "atg_squeeze_copy_dim" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_squeeze_copy_dim_out =
    foreign
      "atg_squeeze_copy_dim_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_squeeze_copy_dims =
    foreign
      "atg_squeeze_copy_dims"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_squeeze_copy_dims_out =
    foreign
      "atg_squeeze_copy_dims_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_squeeze_copy_out =
    foreign "atg_squeeze_copy_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_squeeze_dim =
    foreign "atg_squeeze_dim" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_squeeze_dim_ =
    foreign "atg_squeeze_dim_" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_squeeze_dims =
    foreign "atg_squeeze_dims" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_squeeze_dims_ =
    foreign
      "atg_squeeze_dims_"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_sspaddmm =
    foreign
      "atg_sspaddmm"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_sspaddmm_out =
    foreign
      "atg_sspaddmm_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_stack =
    foreign "atg_stack" (ptr gc_tensor @-> int @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_stack_out =
    foreign
      "atg_stack_out"
      (gc_tensor @-> ptr gc_tensor @-> int @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_std = foreign "atg_std" (gc_tensor @-> int @-> returning raw_tensor)

  let stubs_std_correction =
    foreign
      "atg_std_correction"
      (gc_tensor @-> ptr int64_t @-> int @-> scalar @-> int @-> returning raw_tensor)
  ;;

  let stubs_std_correction_out =
    foreign
      "atg_std_correction_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> scalar
       @-> int
       @-> returning raw_tensor)
  ;;
end

module C1 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_std_dim =
    foreign
      "atg_std_dim"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_std_mean =
    foreign "atg_std_mean" (ptr raw_tensor @-> gc_tensor @-> int @-> returning void)
  ;;

  let stubs_std_mean_correction =
    foreign
      "atg_std_mean_correction"
      (ptr raw_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> scalar
       @-> int
       @-> returning void)
  ;;

  let stubs_std_mean_correction_out =
    foreign
      "atg_std_mean_correction_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> scalar
       @-> int
       @-> returning void)
  ;;

  let stubs_std_mean_dim =
    foreign
      "atg_std_mean_dim"
      (ptr raw_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_std_out =
    foreign
      "atg_std_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_stft =
    foreign
      "atg_stft"
      (gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> gc_tensor
       @-> int
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_stft_center =
    foreign
      "atg_stft_center"
      (gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> gc_tensor
       @-> int
       @-> string
       @-> int
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_stride = foreign "atg_stride" (gc_tensor @-> int64_t @-> returning int64_t)

  let stubs_sub =
    foreign "atg_sub" (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_sub_ =
    foreign "atg_sub_" (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_sub_out =
    foreign
      "atg_sub_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_sub_scalar =
    foreign "atg_sub_scalar" (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_sub_scalar_ =
    foreign "atg_sub_scalar_" (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_sub_scalar_out =
    foreign
      "atg_sub_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_subtract =
    foreign "atg_subtract" (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_subtract_ =
    foreign "atg_subtract_" (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_subtract_out =
    foreign
      "atg_subtract_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_subtract_scalar =
    foreign
      "atg_subtract_scalar"
      (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_subtract_scalar_ =
    foreign
      "atg_subtract_scalar_"
      (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_sum = foreign "atg_sum" (gc_tensor @-> int @-> returning raw_tensor)

  let stubs_sum_dim_intlist =
    foreign
      "atg_sum_dim_intlist"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_sum_intlist_out =
    foreign
      "atg_sum_intlist_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_sum_out =
    foreign "atg_sum_out" (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_sum_to_size =
    foreign "atg_sum_to_size" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_svd =
    foreign "atg_svd" (ptr raw_tensor @-> gc_tensor @-> int @-> int @-> returning void)
  ;;

  let stubs_svd_u =
    foreign
      "atg_svd_u"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_swapaxes =
    foreign "atg_swapaxes" (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_swapaxes_ =
    foreign "atg_swapaxes_" (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_swapdims =
    foreign "atg_swapdims" (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_swapdims_ =
    foreign "atg_swapdims_" (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_tr = foreign "atg_t" (gc_tensor @-> returning raw_tensor)
  let stubs_t_ = foreign "atg_t_" (gc_tensor @-> returning raw_tensor)
  let stubs_t_copy = foreign "atg_t_copy" (gc_tensor @-> returning raw_tensor)

  let stubs_t_copy_out =
    foreign "atg_t_copy_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_take = foreign "atg_take" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_take_along_dim =
    foreign
      "atg_take_along_dim"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_take_along_dim_out =
    foreign
      "atg_take_along_dim_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_take_out =
    foreign "atg_take_out" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_tan = foreign "atg_tan" (gc_tensor @-> returning raw_tensor)
  let stubs_tan_ = foreign "atg_tan_" (gc_tensor @-> returning raw_tensor)

  let stubs_tan_out =
    foreign "atg_tan_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_tanh = foreign "atg_tanh" (gc_tensor @-> returning raw_tensor)
  let stubs_tanh_ = foreign "atg_tanh_" (gc_tensor @-> returning raw_tensor)

  let stubs_tanh_backward =
    foreign "atg_tanh_backward" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_tanh_backward_grad_input =
    foreign
      "atg_tanh_backward_grad_input"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_tanh_out =
    foreign "atg_tanh_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_tensor_split =
    foreign
      "atg_tensor_split"
      (gc_tensor @-> int64_t @-> int64_t @-> returning (ptr raw_tensor))
  ;;

  let stubs_tensor_split_indices =
    foreign
      "atg_tensor_split_indices"
      (gc_tensor @-> ptr int64_t @-> int @-> int64_t @-> returning (ptr raw_tensor))
  ;;

  let stubs_tensor_split_tensor_indices_or_sections =
    foreign
      "atg_tensor_split_tensor_indices_or_sections"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning (ptr raw_tensor))
  ;;

  let stubs_tensordot =
    foreign
      "atg_tensordot"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_tensordot_out =
    foreign
      "atg_tensordot_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_threshold =
    foreign "atg_threshold" (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_threshold_ =
    foreign "atg_threshold_" (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_threshold_backward =
    foreign
      "atg_threshold_backward"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_threshold_backward_grad_input =
    foreign
      "atg_threshold_backward_grad_input"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_threshold_out =
    foreign
      "atg_threshold_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_tile =
    foreign "atg_tile" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_to_ = foreign "atg_to" (gc_tensor @-> int @-> returning raw_tensor)
